Fix tips spacing on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -153,24 +153,26 @@ p {
 }
 
 .u-Cross {
-  &::before {
-    content: '';
-    display: block;
-    position: absolute;
-    left: -40px;
-    height: 24px;
-    width: 24px;
-    background: svg-load('./img/cross.svg', fill='white');
-    background-size: cover;
-  }
-
-  &:hover {
-    transform: translateY(-5px);
-    transition: transform 1s ease-in-out;
-  }
-
-  &:hover::before {
-    transform: rotate(45deg);
-    transition: transform 0.25s ease-in-out;
+  @media (min-width: 500px) {
+    &::before {
+      content: '';
+      display: block;
+      position: absolute;
+      left: -40px;
+      height: 24px;
+      width: 24px;
+      background: svg-load('./img/cross.svg', fill='white');
+      background-size: cover;
+    }
+  
+    &:hover {
+      transform: translateY(-5px);
+      transition: transform 1s ease-in-out;
+    }
+  
+    &:hover::before {
+      transform: rotate(45deg);
+      transition: transform 0.25s ease-in-out;
+    }
   }
 }
